# epass-applications

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  lv_conf.h
applications/: CMakeLists.txt
applications/common/: CMakeLists.txt
applications/common/epass_game/: CMakeLists.txt
applications/common/epass_game/include/: epass_game.h
applications/common/epass_game/src/: drm_warpper.c  drm_warpper.h  epass_game.c  game_draw.c  game_platform_wasm.c  log.c  log.h  spsc_queue.c  spsc_queue.h
applications/common/epass_game/tests/: test_draw.c
applications/common/epass_input/: CMakeLists.txt
applications/common/epass_input/include/: epass_input.h
applications/common/epass_input/src/: epass_input.c
applications/ebook_reader/: CMakeLists.txt  appconfig.json
applications/ebook_reader/src/: main.c
applications/ebook_reader/src/port/: platform.c  platform.h
applications/ebook_reader/src/reader/: gbk_table.c  gbk_table.h  reader.c  reader.h
applications/ebook_reader/src/ui/: ui.c  ui.h
applications/ebook_reader/tools/: gen_gbk_table.py
applications/epniccc/: CMakeLists.txt  appconfig.json  epniccc_bg.h  main.c  niccc.c  niccc.h
applications/epniccc/tests/: test_renderer.c
applications/flappy_bird/: CMakeLists.txt  appconfig.json  main.c
applications/game_2048/: CMakeLists.txt  appconfig.json
applications/game_2048/src/: logic.c  logic.h  main.c
applications/game_2048/tests/: test_logic.c
applications/image_viewer/: CMakeLists.txt  appconfig.json
applications/image_viewer/src/: main.c
applications/image_viewer/src/port/: drm_warpper.c  drm_warpper.h  platform.c  platform.h
applications/image_viewer/src/ui/: ui.c  ui.h
applications/image_viewer/src/viewer/: gallery.c  gallery.h
applications/quick_start/: CMakeLists.txt  appconfig.json  wasm_exclude.txt
applications/quick_start/src/: main.c
applications/quick_start/src/port/: drm_warpper.c  drm_warpper.h  platform.c  platform.h
applications/quick_start/src/system/: storage.c  storage.h  sysinfo.c  sysinfo.h  system_wasm.c  ve_check.c  ve_check.h
applications/quick_start/src/ui/: ui.c  ui.h
applications/quick_start/tests/: test_logic.c
applications/quick_start/tools/: capture_shots.sh  preview.c
applications/snake/: CMakeLists.txt  appconfig.json
applications/snake/src/: logic.c  logic.h  main.c
applications/snake/tests/: test_logic.c
applications/system_maintenance/: CMakeLists.txt  appconfig.json  wasm_exclude.txt
applications/system_maintenance/src/: main.c
applications/system_maintenance/src/port/: drm_warpper.c  platform.c  platform.h
applications/system_maintenance/src/system/: boot_config.c  boot_config.h  boot_source.c  boot_source.h  fido_store.c  fido_store.h  overlay_registry.c  overlay_registry.h  sd_format.c  sd_format.h  system_info.c  system_info.h  system_wasm.c
applications/system_maintenance/src/ui/: ui.c  ui.h
applications/system_maintenance/tests/: test_system.c
applications/tetris/: CMakeLists.txt  appconfig.json
applications/tetris/src/: logic.c  logic.h  main.c
applications/tetris/tests/: test_logic.c
applications/video_player/: CMakeLists.txt  appconfig.json
applications/video_player/src/: config.h  main.c
applications/video_player/src/driver/: drm_warpper.c  drm_warpper.h
applications/video_player/src/player/: mediaplayer.c  mediaplayer.h
applications/video_player/src/port/: platform.c  platform.h
applications/video_player/src/ui/: ui.c  ui.h
applications/video_player/src/utils/: compat.h  log.c  log.h  misc.c  misc.h  spsc_queue.c
applications/video_player/src/vdec/: bitreader.c  bitreader.h  h264-ctrls-5.4.h  h264_dpb.c  h264_dpb.h  h264_parser.c  h264_parser.h  mp4_demux.c  mp4_demux.h  nalu.c  nalu.h  rotate_v4l2.c  rotate_v4l2.h  vdec.h  vdec_v4l2.c  vdec_v4l2.h
cloud/: .dockerignore  killall.sh
cloud/allocator/: README.md  app.py  requirements.txt  serve.sh
cloud/allocator/static/: gone.html  index.html  session.html
cloud/devbox/: Dockerfile  README.md  entrypoint-web.sh  entrypoint.sh  llm_forward.py  prewarm.c  run.sh
docs/: cloud-wasm-plan.md
hal/: CMakeLists.txt
hal/include/: hal_display.h  hal_input.h  hal_run.h  spsc_queue.h
hal/src/: hal_display.c  hal_display_wasm.c  hal_input.c  hal_input_wasm.c  hal_run.c  hal_run_wasm.c  log.c  spsc_queue.c
hal/wasm_compat/mtd/: mtd-user.h
hal/wasm_compat/sys/: reboot.h
tools/: build_wasm_game.sh  build_wasm_index.sh  build_wasm_lvgl.sh  package_app.sh  publish_app2share.py  wasm_lvgl_pre.js  wasm_shell.html  wasm_vfs_pre.js  wasm_vfs_shell.html
tools/wasm_samples/ebook_reader/: 阅读器使用说明.txt
